# dos14-baturevich_dmitry-git-flow

./: .gitignore  Dockerfile  Dockerfile.certbot  Dockerfile.nginx  Dockerfile.nginxapp  Dockerfile.nginxcertbot  Jenkinsfile  LICENSE  README.md  credits_deposits.yaml  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  nginxapp.conf  nginxcertbot.conf  pyproject.toml
ansible/: ansible.cfg  hw_20.yaml  inventory.ini
ansible/group_vars/: all.yaml
ansible/roles/container/tasks/: main.yaml
ansible/roles/docker/tasks/: main.yaml
ansible/roles/docker/vars/: main.yaml
ansible/roles/git/tasks/: main.yaml
ansible/roles/git/vars/: main.yaml
ansible/roles/pyenv/tasks/: main.yaml
ansible/roles/service/tasks/: main.yaml
ansible/roles/service/templates/: app.service.j2
ansible/roles/user/tasks/: main.yaml
k8s/argoCD/: application.yaml  project.yaml
k8s/bank/: Chart.yaml  values-prd.yaml  values-test.yaml
k8s/bank/templates/: deployment.yaml
