[tool.poetry]
name = "hw-py-project"
version = "0.0.1"
description = ""
authors = ["Freeko"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
