[tool.poetry]
name = "hw-py-project"
version = "0.0.1"
description = ""
authors = ["Freeko"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
flask = "^2.3.2"
account = {git = "https://github.com/ggramal/dos14-gramovich-git-flow.git"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
